# catkin_pip

cmake/: catkin-pip-prefix.cmake.in  catkin-pip-setup.cmake.in  catkin-pip.cmake
cmake/Modules/: FindCookiecutter.cmake
test/: CMakeLists.txt  mypippkg.cmake  test_requirements.txt
